Source/WebCore/platform/audio/FFTFrameStub.cpp
@@ -64,11 +64,6 @@ FFTFrame::~FFTFrame()
     ASSERT_NOT_REACHED();
 }
 
-void FFTFrame::multiply(const FFTFrame& frame)
-{
-    ASSERT_NOT_REACHED();
-}
-
 void FFTFrame::doFFT(const float* data)
 {
     ASSERT_NOT_REACHED();
